Firestore hosting students data

--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
