--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "build": "tsc"
+    "build": "tsc && netlify deploy --prod"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.6.0",
