--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "functions",
     "rootDir": "src",
     "esModuleInterop": true,
     "moduleResolution": "Node16",
