--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "node ./functions/index.js",
     "dev": "tsx watch src/index.ts",
-    "build": "tsc && netlify deploy --prod"
+    "build": "tsc"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.6.0",
