--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./functions/index.js",
+    "start": "node ./dist/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc"
   },
