CORS policy error

--- a/api/netlify.toml
+++ b/api/netlify.toml
@@ -6,3 +6,8 @@
   from = "/real/*"
   status = 200
   to = "/.netlify/functions/real/:splat"
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
