--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "npx netlify dev",
     "serve": "npx netlify dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.6.0",
