--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run Prettier
-        run: npm run format
+        run: npm run format:fix
       - name: Run Eslint
         run: npm run lint
 
